fix: table spacing, font sizing, font weights, shadows, borders

--- a/src/components/Common/UI/Table/Table.module.scss
+++ b/src/components/Common/UI/Table/Table.module.scss
@@ -11,8 +11,9 @@
     width: 100%;
     word-break: break-word;
     forced-color-adjust: none;
-    border-radius: toRem(6);
+    border-radius: toRem(12);
     border-collapse: separate;
+    box-shadow: var(--g-shadowResting);
 
     &[data-focus-visible] {
       outline: var(--g-focusRingWidth) solid var(--g-focusRingColor);
@@ -21,8 +22,19 @@
     :global(.react-aria-TableHeader) {
       th {
         color: var(--g-colorBodyContent);
-        font-weight: 400;
-        font-size: var(--g-fontSizeSmall);
+        font-weight: 500;
+        font-size: var(--g-fontSizeExtraSmall);
+        background-color: var(--g-colorBodyAccent);
+        color: var(--g-colorBodySubContent);
+        border-bottom: 1px solid var(--g-colorBorder);
+
+        &:first-child {
+          border-top-left-radius: toRem(12);
+        }
+
+        &:last-child {
+          border-top-right-radius: toRem(12);
+        }
       }
 
       //Produces spacing between header and body
@@ -41,13 +53,13 @@
     :global(.react-aria-Row) {
       outline: none;
       cursor: default;
-      color: var(--g-colorBodyContent);
+      color: var(--g-colorBodySubContent);
       font-size: var(--g-fontSizeSmall);
       position: relative;
       transform: scale(1);
 
-      &:last-child .react-aria-Cell {
-        border-bottom: none;
+      &:last-child :global(.react-aria-Cell) {
+        border-bottom: none !important;
       }
 
       &[data-footer='true'] {
@@ -97,7 +109,6 @@
 
     :global(.react-aria-Cell),
     :global(.react-aria-Column) {
-      padding: toRem(20) toRem(16);
       text-align: left;
       outline: none;
       word-break: normal;
@@ -112,16 +123,22 @@
     }
 
     :global(.react-aria-Column) {
-      padding-top: toRem(10);
-      padding-bottom: toRem(10);
+      padding-left: toRem(16);
+      padding-right: toRem(16);
+      height: toRem(40);
     }
     :global(.react-aria-Cell) {
+      padding: toRem(14) toRem(16);
       transform: translateZ(0);
       border-bottom: 1px solid var(--g-colorBorder);
 
       &[role='rowheader'] {
         color: var(--g-colorBodyContent);
-        font-weight: var(--g-fontWeightRegular);
+        font-weight: var(--g-fontWeightMedium);
+      }
+
+      &:first-child {
+        font-weight: var(--g-fontWeightMedium);
       }
     }
 
